sistemati filtro e nazionalizzazione

--- a/mobile/src/pages/elementDetails/elementDetails.html
+++ b/mobile/src/pages/elementDetails/elementDetails.html
@@ -14,11 +14,11 @@
   <div *ngIf="!!event">  
     <img *ngIf="event.image" src={{event.image}} width="100%" height="auto">
     <img *ngIf="!event.image" src='assets/icon/comune.jpeg' width="100%" height="auto">
-    <p class="pub">Pubblicato il: <span class="bla">{{createEvent}}</span></p>
+    <p class="pub">{{'Published'|translate}}<span class="bla">{{createEvent}}</span></p>
     <h2>{{event.title}}</h2>
-    <span class="gre">Data evento: <span class="bla">{{dateEvent | date: 'dd.MM.yyyy'}}</span> Ore: <span class="bla">{{dateEvent | date: 'HH.mm'}}</span></span>
-    <p *ngIf="event.address" class="gre">Luogo: <a href="{{url}}" target="_system" class="add">{{event.address}}</a></p>
-    <p *ngIf="!event.address" class="gre">Luogo: <a href="{{url}}" target="_system" class="add">Nessuna informazione sull'indirizzo dell'evento</a></p>
+    <span class="gre">{{'EventDate'|translate}}<span class="bla">{{dateEvent | date: 'dd.MM.yyyy'}}</span>{{'Time'|translate}} <span class="bla">{{dateEvent | date: 'HH.mm'}}</span></span>
+    <p *ngIf="event.address" class="gre">{{'Place'|translate}}<a href="{{url}}" target="_system" class="add">{{event.address}}</a></p>
+    <p *ngIf="!event.address" class="gre">{{'Place'|translate}}<a href="{{url}}" target="_system" class="add">{{'AddressNotFound'|translate}}</a></p>
 
     <p class="des" [innerHTML]="event.description"></p>    
   </div>
