--- a/mobile/src/pages/favorites/favorites.html
+++ b/mobile/src/pages/favorites/favorites.html
@@ -10,7 +10,7 @@
 <ion-content>
     <ion-list>
         <ion-item-divider color="date" (click)="popEvent()">
-            Eventi preferiti <ion-icon *ngIf="!eventPop" name="md-arrow-dropup"></ion-icon> <ion-icon *ngIf="eventPop" name="md-arrow-dropdown"></ion-icon>
+            {{'FavoriteEvents'|translate}}<ion-icon *ngIf="!eventPop" name="md-arrow-dropup"></ion-icon> <ion-icon *ngIf="eventPop" name="md-arrow-dropdown"></ion-icon>
             <ion-item-sliding *ngFor="let event of favList">
                 <ion-item *ngIf="eventPop" class="noborder" (click)="onSelect(event)">
                     <ion-thumbnail item-start>
@@ -18,13 +18,13 @@
                         <img *ngIf="!event.image" src='assets/icon/comune.jpeg'>
                     </ion-thumbnail>
                     <h2>{{event.title}}</h2>
-                    <p class="pubb">Pubblicato il: <span class="crea">{{event.createdDate | date: 'dd/MM/yyyy'}}</span></p>
+                    <p class="pubb">{{'Published'|translate}}<span class="crea">{{event.createdDate | date: 'dd/MM/yyyy'}}</span></p>
                 </ion-item>
             </ion-item-sliding>
         </ion-item-divider>
 
         <ion-item-divider color="date" (click)="popSource()">
-            Sorgenti preferite <ion-icon *ngIf="!sourcePop" name="md-arrow-dropup"></ion-icon> <ion-icon *ngIf="sourcePop" name="md-arrow-dropdown"></ion-icon>
+            {{'FavoriteSources'|translate}}<ion-icon *ngIf="!sourcePop" name="md-arrow-dropup"></ion-icon> <ion-icon *ngIf="sourcePop" name="md-arrow-dropdown"></ion-icon>
             <ion-item-sliding *ngFor="let source of sourceFavList">
                 <ion-item *ngIf="sourcePop" class="noborder" (click)="onSelectSource(source)">
                     {{source.name}} 
@@ -36,7 +36,7 @@
         </ion-item-divider>
             
         <ion-item-divider color="date" (click)="popTheme()">
-            Temi preferiti <ion-icon *ngIf="!themePop" name="md-arrow-dropup"></ion-icon> <ion-icon *ngIf="themePop" name="md-arrow-dropdown"></ion-icon>
+            {{'FavoriteThemes'|translate}}<ion-icon *ngIf="!themePop" name="md-arrow-dropup"></ion-icon> <ion-icon *ngIf="themePop" name="md-arrow-dropdown"></ion-icon>
             <ion-item-sliding  *ngFor="let theme of themesFavList">
                 <ion-item *ngIf="themePop" class="noborder" (click)="onSelectTheme(theme)">
                     {{theme.name}} 
