Added version in credit page + icon + splash

--- a/mobile/src/pages/credits/credits.html
+++ b/mobile/src/pages/credits/credits.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="row credits_row version">
-        <div class="col credits_version" ng-bind-html="version"></div>
+        <div class="col credits_version" >{{version}}</div>
         <span></span>
     </div>
     <div class="row credits_row">
