Added terms of service on startup.

--- a/mobile/src/pages/terms/terms.html
+++ b/mobile/src/pages/terms/terms.html
@@ -1,5 +1,5 @@
-<ion-header>
-    <ion-navbar color="primary">
+<ion-header >
+    <ion-navbar color="primary" *ngIf="!accepting">
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
@@ -11,6 +11,6 @@
     <div [innerHTML]="termsFile"></div>
     <div *ngIf="accepting" style="text-align:center;">
         <div class="button button-calm" (click)="acceptPrivacy()">{{'lbl_accept' | translate}}</div>
-        <div class="button " (click)="refusePrivacy()">{{'lbl_reject' | translate}}</div>
+        <div class="button" (click)="refusePrivacy()">{{'lbl_reject' | translate}}</div>
     </div>
 </ion-content>
