--- a/mobile/src/pages/sorgenti/sorgenti.html
+++ b/mobile/src/pages/sorgenti/sorgenti.html
@@ -9,6 +9,10 @@
 
 
 <ion-content>
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles" refreshingText="Refreshing...">
+        </ion-refresher-content>
+    </ion-refresher>
     <ion-list>
         <ion-item *ngFor="let source of sourceType" (click)="onSelect(source)">
             {{source.name}} 
