Fixes for feedback
https://docs.google.com/document/d/1UGzEI98Q1ECVlcP8P0ochhHpx2yWAdORe8zMHmxUS4g/edit#

--- a/mobile/src/pages/credits/credits.html
+++ b/mobile/src/pages/credits/credits.html
@@ -18,22 +18,14 @@
         <span></span>
     </div>
     <div class="row credits_row">
-        <div class="col col-center text-center">
-            <a href="#" onclick="window.open('http://www.bilbao.net', '_system', 'location=yes'); return false;"><img class="image center" src="assets/icon/bilbao.png" width="70%" />
+        <div class="col col-center">
+            <a href="#" onclick="window.open('http://www.comune.trento.it/', '_system', 'location=yes'); return false;"><img class="image center" src="assets/credits/TN_logo.png" width="100%" />
             </a>
         </div>
-        <div class="col col-center text-center">
-            <a href="#" onclick="window.open('http://www.uudenmaanliitto.fi/', '_system', 'location=yes'); return false;"><img class="image center" src="assets/icon/helsinki.png" width="40%" />
-            </a>
-        </div>
-    </div>
-    <div class="row credits_row">
-        <div class="col col-center text-center">
-            <a href="#" onclick="window.open('http://www.novisad.rs', '_system', 'location=yes'); return false;"><img class="image center" src="assets/icon/novi_sad.png" width="70%" />
-            </a>
-        </div>
-        <div class="col col-center text-center">
-            <a href="#" onclick="window.open('http://www.comune.trento.it/', '_system', 'location=yes'); return false;"><img class="image center" src="assets/icon/TN_logo.png" width="70%" />
+        <!--</div>-->
+        <!--<div class="row credits_row">-->
+        <div class="col col-center">
+            <a href="#" onclick="window.open('http://www.welive.eu', '_system', 'location=yes'); return false;"><img class="image center" src="assets/credits/weLive_logo.png" width="63%" />
             </a>
         </div>
     </div>
@@ -44,14 +36,8 @@
     </div>
     <div class="row credits_row" style="text-align:center;">
         <div class="col col-center">
-            <a href="#" onclick="window.open('http://europa.eu/index_en.htm', '_system', 'location=yes'); return false;"><img class="image center" src="assets/icon/EU_logo.png" width="40%" />
+            <a href="#" onclick="window.open('http://europa.eu/index_en.htm', '_system', 'location=yes'); return false;"><img class="image center" src="assets/credits/EU_logo.png" width="40%" />
             </a>
         </div>
-    </div>
-    <div class="row credits_row">
-        <h4>{{'lbl_credit_p2'|translate}}</h4>
-    </div>
-    <div class="row credits_row" style="text-align:justify">
-        <p [innerHTML]="info"></p>
     </div>
 </ion-content>
