--- a/mobile/src/pages/filter/filter.html
+++ b/mobile/src/pages/filter/filter.html
@@ -9,13 +9,13 @@
         <ion-item>
             <ion-label>{{'Themes'|translate}}</ion-label>
                 <ion-select multiple="true" [(ngModel)]="temChose">
-                    <ion-option *ngFor="let theme of temList" value={{theme.name}}>{{theme.name}}</ion-option>
+                    <ion-option *ngFor="let theme of temList |orderBy:'name'" value={{theme.name}}>{{theme.name}}</ion-option>
                 </ion-select>
         </ion-item>
         <ion-item>
             <ion-label>{{'Sources'|translate}}</ion-label>
                 <ion-select multiple="true" [(ngModel)]="sorChose">
-                    <ion-option *ngFor="let source of sorList" value={{source.name}}>{{source.name}}</ion-option>
+                    <ion-option *ngFor="let source of sorList |orderBy:'name'" value={{source.name}}>{{source.name}}</ion-option>
                 </ion-select>
         </ion-item>
     </ion-list>
