--- a/mobile/src/pages/sorgenti/sorgenti.html
+++ b/mobile/src/pages/sorgenti/sorgenti.html
@@ -14,7 +14,7 @@
         </ion-refresher-content>
     </ion-refresher>
     <ion-list>
-        <ion-item *ngFor="let source of sourceType" (click)="onSelect(source)">
+        <ion-item *ngFor="let source of sourceType|orderBy:'name'" (click)="onSelect(source)">
             {{source.name}} 
             <ion-badge item-end class="fav">
                 <ion-icon *ngIf="source.fav" name="star"></ion-icon>
