Fixes for prod release

--- a/mobile/www/resources/terms-it.html
+++ b/mobile/www/resources/terms-it.html
@@ -1,7 +1,7 @@
 <div>
     <div id="policy_screen">
 
-        <div class="help_title">TRENTO ORIENTA – TERMINI E CONDIZIONI DI UTILIZZO</div>
+        <div class="help_title">TRENTORIENTA – TERMINI E CONDIZIONI DI UTILIZZO</div>
 
         <div class="policy_box">
 
