--- a/mobile/src/pages/credits/credits.html
+++ b/mobile/src/pages/credits/credits.html
@@ -3,7 +3,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>{{'menu_about'| translate}}</ion-title>    
+        <ion-title>{{'Credits'| translate}}</ion-title>    
     </ion-navbar>    
 </ion-header>
 
