--- a/mobile/www/resources/terms-en.html
+++ b/mobile/www/resources/terms-en.html
@@ -1,6 +1,6 @@
 <div>
     <div id="policy_screen">
-        <div class="help_title">TRENTO INFORMA – TERMS AND CONDITIONS OF USE</div>
+        <div class="help_title">TRENTO INFORMER – TERMS AND CONDITIONS OF USE</div>
 
         <div class="policy_box">
 
