Fixes for prod release

--- a/mobile/src/pages/favorites/favorites.html
+++ b/mobile/src/pages/favorites/favorites.html
@@ -1,3 +1,4 @@
+
 <ion-header>
     <ion-navbar color="primary">
         <button ion-button menuToggle>
@@ -10,7 +11,7 @@
 <ion-content>
     <ion-list>
         <ion-item-divider color="date" (click)="popEvent()">
-            {{'FavoriteEvents'|translate}}<ion-icon *ngIf="!eventPop" name="md-arrow-dropup"></ion-icon> <ion-icon *ngIf="eventPop" name="md-arrow-dropdown"></ion-icon>
+            {{'FavoriteEvents'|translate}}<ion-icon *ngIf="!eventPop" name="md-arrow-dropdown"></ion-icon> <ion-icon *ngIf="eventPop" name="md-arrow-dropup"></ion-icon>
             <ion-item-sliding *ngFor="let event of favList">
                 <ion-item *ngIf="eventPop" class="noborder" (click)="onSelect(event)">
                     <ion-thumbnail item-start>
@@ -24,7 +25,7 @@
         </ion-item-divider>
 
         <ion-item-divider color="date" (click)="popSource()">
-            {{'FavoriteSources'|translate}}<ion-icon *ngIf="!sourcePop" name="md-arrow-dropup"></ion-icon> <ion-icon *ngIf="sourcePop" name="md-arrow-dropdown"></ion-icon>
+            {{'FavoriteSources'|translate}}<ion-icon *ngIf="!sourcePop" name="md-arrow-dropdown"></ion-icon> <ion-icon *ngIf="sourcePop" name="md-arrow-dropup"></ion-icon>
             <ion-item-sliding *ngFor="let source of sourceFavList">
                 <ion-item *ngIf="sourcePop" class="noborder" (click)="onSelectSource(source)">
                     {{source.name}} 
@@ -36,7 +37,7 @@
         </ion-item-divider>
             
         <ion-item-divider color="date" (click)="popTheme()">
-            {{'FavoriteThemes'|translate}}<ion-icon *ngIf="!themePop" name="md-arrow-dropup"></ion-icon> <ion-icon *ngIf="themePop" name="md-arrow-dropdown"></ion-icon>
+            {{'FavoriteThemes'|translate}}<ion-icon *ngIf="!themePop" name="md-arrow-dropdown"></ion-icon> <ion-icon *ngIf="themePop" name="md-arrow-dropup"></ion-icon>
             <ion-item-sliding  *ngFor="let theme of themesFavList">
                 <ion-item *ngIf="themePop" class="noborder" (click)="onSelectTheme(theme)">
                     {{theme.name}} 
