Terms and conditions fixed, Time of events at present day to fix

--- a/mobile/src/pages/elementList/elementList.html
+++ b/mobile/src/pages/elementList/elementList.html
@@ -100,6 +100,7 @@
                         </ion-thumbnail>
                         <h2>{{event.title}}</h2>
                         <span class="grey">{{'Published'|translate}}</span> {{event.createdDate | date: 'dd/MM/yyyy'}}
+                        <span class="grey">{{'Time'|translate}} </span>{{ event.eventoDate | date: 'HH:mm'}} 
                     </ion-item>
                 </ion-item-divider>
             </ion-list>
