--- a/mobile/src/pages/terms/terms.html
+++ b/mobile/src/pages/terms/terms.html
@@ -8,9 +8,13 @@
 </ion-header>
 
 <ion-content class="padding">
-    <div [innerHTML]="termsFile"></div>
+
+    <ion-content scroll="true" scrollbar-y="true" style="width:auto; height:90%">
+        <div [innerHTML]="termsFile"></div>
+    </ion-content>
+
     <div *ngIf="accepting" style="text-align:center;">
         <div class="button button-calm" (click)="acceptPrivacy()">{{'lbl_accept' | translate}}</div>
         <div class="button" (click)="refusePrivacy()">{{'lbl_reject' | translate}}</div>
     </div>
-</ion-content>
+</ion-content>   
