--- a/mobile/src/pages/elementDetails/elementDetails.html
+++ b/mobile/src/pages/elementDetails/elementDetails.html
@@ -20,7 +20,7 @@
   <ion-card>
       <p class="pub">{{'Published'|translate}}<span class="bla">{{createEvent}}</span></p>
       <ion-card-title>{{event.title}}</ion-card-title>
-      <span *ngIf="event.eventStart" class="gre">{{'EventDate'|translate}}<span class="bla">{{dateEvent | date: 'dd.MM.yyyy'}}</span>{{'Time'|translate}} <span class="bla">{{dateEvent | date: 'HH.mm'}}</span></span>
+      <span *ngIf="event.eventStart" class="gre">{{'EventDate'|translate}}<span class="bla">{{dateEvent | date: 'dd/MM/yyyy'}}</span>{{'Time'|translate}} <span class="bla">{{dateEvent | date: 'HH:mm'}}</span></span>
       <p *ngIf="event.address" class="gre">{{'Place'|translate}}<a href="{{url}}" target="_system" class="add">{{event.address}}</a></p>
       <p *ngIf="!event.address" class="gre">{{'Place'|translate}}<a href="{{url}}" target="_system" class="add">{{'AddressNotFound'|translate}}</a></p>
   
