--- a/mobile/src/pages/elementDetails/elementDetails.html
+++ b/mobile/src/pages/elementDetails/elementDetails.html
@@ -13,21 +13,64 @@
 <ion-content>
   <div *ngIf="!!event"> 
     <ion-card>
-        <img *ngIf="event.image" src={{event.image}} width="100%" height="auto">
-        <img *ngIf="!event.image" src='assets/icon/comune.jpeg' width="100%" height="auto">
-        
-  </ion-card>
-  <ion-card>
-      <p class="pub">{{'Published'|translate}}<span class="bla">{{createEvent}}</span></p>
+      <img *ngIf="event.image" src={{event.image}} width="100%" height="auto">
+      <img *ngIf="!event.image" src='assets/icon/comune.jpeg' width="100%" height="auto">  
+
+      <p class="pub">{{'Published'|translate}}<span class="bla">{{event.createdDate}}</span></p>
       <ion-card-title>{{event.title}}</ion-card-title>
-      <span *ngIf="event.eventStart" class="gre">{{'EventDate'|translate}}<span class="bla">{{dateEvent | date: 'dd/MM/yyyy'}}</span>{{'Time'|translate}} <span class="bla">{{dateEvent | date: 'HH:mm'}}</span></span>
+
+      <ion-card *ngIf="event.eventStart != null">
+        <p ion-button clear block outline icon-start  class="left">
+          <span class="button-inner">
+            <ion-icon name="calendar"></ion-icon>
+            {{'EventDate'|translate}} {{event.eventoDate | date: 'dd/MM/yyyy'}}
+          </span>
+        </p>
+      </ion-card>
+      <ion-card *ngIf="event.eventTiming != null">
+        <p ion-button clear block outline icon-start  class="left">
+          <span class="button-inner">
+            <ion-icon name="watch"></ion-icon>
+            {{'Time'|translate}} {{event.eventTiming}}
+          </span>
+        </p>
+      </ion-card>
+      <ion-card *ngIf="event.address">
+        <a ion-button clear block icon-start  href="{{url}}" target="_system" class="left">
+          <span class="button-inner">
+          <ion-icon name="pin"></ion-icon>
+          {{'Place'|translate}} {{event.address}}
+          </span>
+        </a>
+      </ion-card>
+
+      <ion-card *ngIf="!event.address">
+          <a ion-button clear block icon-start  href="{{url}}" target="_system" class="left">
+              <span class="button-inner">
+                <ion-icon name="pin"></ion-icon>{{'Place'|translate}} {{'AddressNotFound'|translate}}
+              </span>
+            </a>
+      </ion-card>
+      <ion-card  *ngIf="event.videoLink">
+          <a ion-button clear block icon-start href="{{event.videoLink}}" target="_system" class="left">
+              <span class="button-inner">
+                <ion-icon name="play"></ion-icon>
+                {{'video'|translate}}
+              </span>
+            </a>
+      </ion-card>
+
+
+      <!--
       <p *ngIf="event.address" class="gre">{{'Place'|translate}}<a href="{{url}}" target="_system" class="add">{{event.address}}</a></p>
       <p *ngIf="!event.address" class="gre">{{'Place'|translate}}<a href="{{url}}" target="_system" class="add">{{'AddressNotFound'|translate}}</a></p>
-      <p *ngIf="event.videoLink" class="gre">{{'video'|translate}}<a href="{{event.videoLink}}" target="_system" class="add">{{event.title}}</a></p>
-  
-      <p class="des" [innerHTML]="event.description"></p>    
-  
-  </ion-card>
-</div>
+      <span *ngIf="event.eventTiming != null" class="gre">{{'EventDate'|translate}}<span class="bla">{{event.eventoDate}}</span>{{'Time'|translate}} <span class="bla">{{event.eventTiming}}</span></span>
+      -->
+      <ion-card>
+        <p class="des" [innerHTML]="event.description"></p> 
+      </ion-card>
+   
+    </ion-card>
+  </div>
 
 </ion-content>
